@@ -14,6 +14,10 @@ PHP                                                                        NEWS
     (Nathan Freeman)
   . Fixed incorrect error handling in dom_zvals_to_fragment(). (nielsdos)
 
+- Exif:
+  . Fixed bug GH-9397 (exif read : warnings and errors : Potentially invalid
+    endianess, Illegal IFD size and Undefined index). (nielsdos)
+
 - PCRE:
   . Fixed bug GH-10968 (Segfault in preg_replace_callback_array()). (ilutov)
 
